--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
             ssh -o StrictHostKeyChecking=no \
                 -i /home/ubuntu/.ssh/ssh_key.pem \
                 -t ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_NIFI }} \
-                "docker pull "${{ secrets.FOODWAY_USER_DOCKERHUB }}"/nifi-foodway:latest && docker run -d -p 8080:8080 -p 8443:8443 --name nifi-foodway "${{ secrets.FOODWAY_USER_DOCKERHUB }}"/nifi-foodway:latest"
+                "sudo docker pull "${{ secrets.FOODWAY_USER_DOCKERHUB }}"/nifi-foodway:latest && docker run -d -p 8080:8080 -p 8443:8443 --name nifi-foodway "${{ secrets.FOODWAY_USER_DOCKERHUB }}"/nifi-foodway:latest"
 
       - name: Check if NiFi instance is up
         run: |
