--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,11 @@ jobs:
 
       - name: Create Parameter Context in NiFi
         run: |
-          curl --request POST \
-            --url https://${{ secrets.SERVER_HOST_NIFI }}:8443/nifi-api/parameter-contexts \
+            ssh -o StrictHostKeyChecking=no \
+                -i /home/ubuntu/.ssh/ssh_key.pem \
+                ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_NIFI }} << 'EOF'
+            curl --request POST \
+            --url http://${{ secrets.SERVER_HOST_NIFI }}:8443/nifi-api/parameter-contexts \
             --header 'Content-Type: application/json' \
             --data '{
               "revision": {
@@ -113,3 +116,5 @@ jobs:
                 ]
               }
             }'
+            EOF
+          
