feat: add pipeline ci-cd 34

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
             ssh -o StrictHostKeyChecking=no \
-                -i ./home/ubuntu/.ssh/ssh_key.pem \
+                -i /home/ubuntu/.ssh/ssh_key.pem \
                 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_NIFI }} << 'EOF'
             # Check if the container is running and remove it if it is
             if [ "$(sudo docker ps -q -f name=nifi-foodway)" ]; then
