feat: add pipeline ci-cd 41

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Create Parameter Context in NiFi
         run: |
             sudo ssh -o StrictHostKeyChecking=no \
-                -i /home/${{ secrets.SERVER_USER }}/.ssh/ssh_key.pem \
+                -i /home/ubuntu/.ssh/ssh_key.pem \
                 -t ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_NIFI }} << 'EOF'
             sudo curl --request POST \
             --url http://${{ secrets.SERVER_HOST_NIFI }}:8443/nifi-api/parameter-contexts \
