--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,9 @@ jobs:
             echo "NiFi is down"
           fi
 
-      - name: Add Bastion Host to known_hosts
+      - name: Add Bastion Host to known_hosts 
         run: |
-          ssh-keyscan -H ${{ secrets.BASTION_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.BASTION_HOST }} >> ~/home/ubuntu/.ssh/known_hosts
 
       - name: Create Parameter Context in NiFi
         run: |
