--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Create Parameter Context in NiFi
         run: |
           sudo ssh -o StrictHostKeyChecking=no \
-                  -i /home/ubuntu/.ssh/ssh_key.pem \
+                  -i ~/home/ubuntu/.ssh/ssh_key.pem \
                   -tt -J ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }} \
                   ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST_NIFI }} << 'EOF'
           sudo curl --request POST \
